# nl2sql-agent-evaluator

./: .env.template  .gitignore  README.md  extract_failures.py  log_20260123_095122.txt  log_20260123_095633.txt  log_20260123_095757.txt  log_20260123_145744.txt  main.py  pyproject.toml  verify_retest.py
.agent/workflows/: sync.md
archive/logs/: log_20260122_101020.txt
archive/scripts/: gen_test_cases.py
config/: generation_config.json
data/: repro_test_case.csv  test_results_20260123_160236.csv
data/COO/: README.md
data/agent/: agent_config.json  test_queries.json
data/pipeline/: step1_questions_20260126_114340.csv  step1_questions_20260126_114523.csv  step1_questions_20260126_143142.csv  step2_truth_20260126_143142.csv  step4_final_20260126_141541.csv  step4_final_20260126_143142.csv
data/qa/: generation_config.json  generation_config_full.json  (+2 more)
docs/: GETTING_STARTED.md  QA_PIPELINE.md  SOTA_MAPPING.md  qa_roadmap_advanced.md  qa_strategy_master.md
logs/: log_20260122_105531.txt
scripts/: 01_prepare_data.py  02_deploy_agent.py  03_run_qa.py  analyze_failures.py  analyze_qa_failures.py  analyze_qa_result.py  analyze_qa_step4.py  filter_failures.py  generate_sample_data.py  generate_test_results.py  run_pipeline.py  sample_data_billing.txt  sample_data_booking.txt  sync_instructions.py  sync_logs.py  update_generation_config.py
src/: multi_agent_analyst.py  run_analysis.py
tests/: coverage_state.json  failure_analysis_report.md  failure_analyzer.py  golden_generator.py  test_case.csv  test_connection.py  test_runner.py  test_single_query.py
(+124 files in other folders)
